# react-native-msgpack

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-msgpack.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/msgpack/: MsgpackModule.java  MsgpackPackage.java
cpp/: cmp.c  cmp.h  msgpack.hpp  react-native-msgpack.cpp  react-native-msgpack.h  react-native-msgpack.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/msgpackexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/msgpackexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/msgpackexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/MsgpackExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/MsgpackExample.xcodeproj/: project.pbxproj
example/ios/MsgpackExample.xcodeproj/xcshareddata/xcschemes/: MsgpackExample.xcscheme
example/ios/MsgpackExample.xcworkspace/: contents.xcworkspacedata
example/ios/MsgpackExampleTests/: MsgpackExampleTests.m
example/src/: App.tsx
ios/: Msgpack.h  Msgpack.mm
ios/Msgpack.xcodeproj/: project.pbxproj
src/: index.tsx
